--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<p><a href="www.pornlars.me">Redirect</a></p>
+<html>
+    <head>
+        <meta http-equiv="refresh" content="1;url=www.pornlars.me" />
+    </head>
+    <body>
+        <h1>Redirecting in 3 seconds...</h1>
+    </body>
+</html>
