--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
-    <head>
-        <meta http-equiv="refresh" content="1;url=www.pornlars.me" />
-    </head>
     <body>
-        <h1>Redirecting in 3 seconds...</h1>
-    </body>
+    <p>You will be redirected in 3 seconds</p>
+    <script>
+        var timer = setTimeout(function() {
+            window.location='http://wwww.pornlars.me'
+        }, 200);
+    </script>
+</body>
 </html>
